--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-31  Tom Tromey  <tromey@redhat.com>
+
+	PR python/13351:
+	* python/py-symbol.c (gdbpy_lookup_symbol): Work even when there
+	is no frame.
+
 2012-02-07  Tom Tromey  <tromey@redhat.com>
 
 	PR python/12027:
