--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-31  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.texinfo (Symbols In Python): lookup_symbol works even
+	without a current frame.
+
 2012-02-07  Tom Tromey  <tromey@redhat.com>
 
 	* gdb.texinfo (Symbols In Python): Document Symbol.needs_frame and
