--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2013-01-11  Tom Tromey  <tromey@redhat.com>
+
+	* main.c (captured_main): Call bfd_init.
+
 2013-01-11  Yao Qi  <yao@codesourcery.com>
 	    Stan Shebs  <stan@codesourcery.com>
 
