--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2013-11-13  Tom Tromey  <tromey@redhat.com>
 
+	PR backtrace/16155:
+	* value.c (value_fetch_lazy): Throw exception if
+	get_frame_register_value returns the same register.
+
+2013-11-13  Tom Tromey  <tromey@redhat.com>
+
 	* dwarf2-frame.c (execute_cfa_program, dwarf2_compile_cfa_to_ax)
 	(dwarf2_frame_cache, dwarf2_frame_prev_register)
 	(encoding_for_size, read_encoded_value): Use error, not
