--- a/gdb/testsuite/ChangeLog
+++ b/gdb/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2013-11-13  Tom Tromey  <tromey@redhat.com>
+
+	* gdb.dwarf2/dw2-bad-cfi.c: New file.
+	* gdb.dwarf2/dw2-bad-cfi.exp: New file.
+	* gdb.dwarf2/dw2-bad-cfi.S: New file.
+
 2013-11-18  Joel Brobecker  <brobecker@adacore.com>
 
 	* mi-language.exp: Add "-list-features" test verifying that
