--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,7 @@
+2014-01-09  Tom Tromey  <tromey@redhat.com>
+
+	* value.c (struct value) <regnum>: Move earlier.
+
 2014-01-13  Tom Tromey  <tromey@redhat.com>
 
 	* gdbcore.h (deprecated_core_resize_section_table): Remove.
