--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,17 @@
 2014-01-09  Tom Tromey  <tromey@redhat.com>
 
+	* ada-lang.c (ada_value_assign, assign_aggregate): Update.
+	* breakpoint.c (can_use_hardware_watchpoint): Update.
+	* opencl-lang.c (evaluate_subexp_opencl): Update.
+	* ppc-linux-nat.c (num_memory_accesses): Update.
+	* valops.c (value_assign): Update.
+	* value.c (struct value) <modifiable>: Update comment.
+	(value_modifiable): Rename from deprecated_value_modifiable.
+	* value.h (value_modifiable): Rename from
+	deprecated_value_modifiable.
+
+2014-01-09  Tom Tromey  <tromey@redhat.com>
+
 	* value.c (struct value) <regnum>: Move earlier.
 
 2014-01-13  Tom Tromey  <tromey@redhat.com>
