--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,17 @@
 2014-01-09  Tom Tromey  <tromey@redhat.com>
 
+	* defs.h: Remove old comment.
+	(deprecated_init_ui_hook): Remove.
+	* interps.c (clear_interpreter_hooks): Update.
+	* main.c (captured_main): Update comment.
+	* solib.c (_initialize_solib): Move "info dll" alias here.
+	* top.c (deprecated_init_ui_hook): Remove.
+	(gdb_init): Update.
+	* windows-nat.c (set_windows_aliases): Remove.
+	(_initialize_windows_nat): Remove "info dll" alias.
+
+2014-01-09  Tom Tromey  <tromey@redhat.com>
+
 	* corefile.c (hook_type, deprecated_exec_file_display_hook)
 	(exec_file_extra_hooks, exec_file_hook_count)
 	(call_extra_exec_file_hooks, specify_exec_file_hook): Remove.
