remove deprecated_file_changed_hook
This removes deprecated_file_changed_hook.

Insight is the last user, and I think it can use the new_objfile
observer instead.  I have a patch for this that I will send to the
Insight list.

2014-01-09  Tom Tromey  <tromey@redhat.com>

	* exec.c (deprecated_file_changed_hook): Remove.
	(file_command): Update.
	* gdbcore.h (deprecated_file_changed_hook): Remove.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2014-01-09  Tom Tromey  <tromey@redhat.com>
 
+	* exec.c (deprecated_file_changed_hook): Remove.
+	(file_command): Update.
+	* gdbcore.h (deprecated_file_changed_hook): Remove.
+
+2014-01-09  Tom Tromey  <tromey@redhat.com>
+
 	* defs.h: Remove old comment.
 	(deprecated_init_ui_hook): Remove.
 	* interps.c (clear_interpreter_hooks): Update.
